framework/contracts/account/manager/tests/snapshots/proxy__proxy_install_standalone_modules-v W$ÛÒyøwÃµg)[3)¼â&·ùm.snap
---
source: contracts/account/manager/tests/proxy.rs
expression: chain.app.borrow().dump_wasm_raw(&contract_addr)
---
- - - 0
    - 123
    - 53
    - 125
    - 115
    - 116
    - 97
    - 116
    - 101
  - - 123
    - 34
    - 109
    - 111
    - 100
    - 117
    - 108
    - 101
    - 115
    - 34
    - 58
    - 91
    - 34
    - 68
    - 63
    - 195
    - 138
    - 92
    - 117
    - 48
    - 48
    - 49
    - 52
    - 194
    - 172
    - 195
    - 165
    - 91
    - 194
    - 143
    - 35
    - 94
    - 44
    - 194
    - 161
    - 194
    - 134
    - 52
    - 92
    - 114
    - 92
    - 117
    - 48
    - 48
    - 48
    - 69
    - 92
    - 114
    - 194
    - 161
    - 195
    - 169
    - 195
    - 147
    - 194
    - 175
    - 58
    - 53
    - 90
    - 92
    - 117
    - 48
    - 48
    - 48
    - 69
    - 195
    - 145
    - 195
    - 188
    - 70
    - 37
    - 194
    - 190
    - 195
    - 161
    - 92
    - 98
    - 34
    - 44
    - 34
    - 195
    - 180
    - 194
    - 149
    - 108
    - 194
    - 140
    - 195
    - 157
    - 194
    - 160
    - 194
    - 132
    - 57
    - 195
    - 167
    - 53
    - 195
    - 140
    - 195
    - 171
    - 194
    - 149
    - 72
    - 195
    - 130
    - 195
    - 177
    - 195
    - 153
    - 112
    - 87
    - 106
    - 92
    - 117
    - 48
    - 48
    - 49
    - 53
    - 125
    - 194
    - 182
    - 121
    - 195
    - 141
    - 195
    - 165
    - 102
    - 195
    - 152
    - 194
    - 184
    - 59
    - 195
    - 173
    - 194
    - 134
    - 34
    - 44
    - 34
    - 127
    - 195
    - 166
    - 67
    - 195
    - 138
    - 194
    - 188
    - 195
    - 175
    - 92
    - 98
    - 123
    - 42
    - 194
    - 160
    - 92
    - 117
    - 48
    - 48
    - 48
    - 50
    - 112
    - 195
    - 191
    - 195
    - 176
    - 194
    - 130
    - 195
    - 147
    - 70
    - 195
    - 142
    - 195
    - 162
    - 195
    - 134
    - 195
    - 168
    - 78
    - 53
    - 195
    - 185
    - 102
    - 195
    - 129
    - 194
    - 152
    - 195
    - 162
    - 194
    - 172
    - 92
    - 92
    - 92
    - 117
    - 48
    - 48
    - 49
    - 51
    - 194
    - 166
    - 34
    - 93
    - 125
- - - 0
    - 123
    - 54
    - 125
    - 97
    - 110
    - 115
    - 95
    - 104
    - 111
    - 115
    - 116
  - - 123
    - 34
    - 97
    - 100
    - 100
    - 114
    - 101
    - 115
    - 115
    - 34
    - 58
    - 34
    - 99
    - 111
    - 110
    - 116
    - 114
    - 97
    - 99
    - 116
    - 48
    - 34
    - 125
- - - 97
    - 99
    - 99
    - 95
    - 105
    - 100
  - - 123
    - 34
    - 116
    - 114
    - 97
    - 99
    - 101
    - 34
    - 58
    - 34
    - 108
    - 111
    - 99
    - 97
    - 108
    - 34
    - 44
    - 34
    - 115
    - 101
    - 113
    - 34
    - 58
    - 48
    - 125
- - - 97
    - 100
    - 109
    - 105
    - 110
  - - 34
    - 68
    - 63
    - 195
    - 138
    - 92
    - 117
    - 48
    - 48
    - 49
    - 52
    - 194
    - 172
    - 195
    - 165
    - 91
    - 194
    - 143
    - 35
    - 94
    - 44
    - 194
    - 161
    - 194
    - 134
    - 52
    - 92
    - 114
    - 92
    - 117
    - 48
    - 48
    - 48
    - 69
    - 92
    - 114
    - 194
    - 161
    - 195
    - 169
    - 195
    - 147
    - 194
    - 175
    - 58
    - 53
    - 90
    - 92
    - 117
    - 48
    - 48
    - 48
    - 69
    - 195
    - 145
    - 195
    - 188
    - 70
    - 37
    - 194
    - 190
    - 195
    - 161
    - 92
    - 98
    - 34
- - - 99
    - 111
    - 110
    - 116
    - 114
    - 97
    - 99
    - 116
    - 95
    - 105
    - 110
    - 102
    - 111
  - - 123
    - 34
    - 99
    - 111
    - 110
    - 116
    - 114
    - 97
    - 99
    - 116
    - 34
    - 58
    - 34
    - 97
    - 98
    - 115
    - 116
    - 114
    - 97
    - 99
    - 116
    - 58
    - 112
    - 114
    - 111
    - 120
    - 121
    - 34
    - 44
    - 34
    - 118
    - 101
    - 114
    - 115
    - 105
    - 111
    - 110
    - 34
    - 58
    - 34
    - 48
    - 46
    - 49
    - 57
    - 46
    - 50
    - 34
    - 125

